# Reliora

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README.md  env.py
docs/ai/: README.md
docs/architecture/: README.md
docs/architecture/decisions/: 001-grpc-between-services.md  002-local-transformers-ai.md  003-redis-fsm-workflow.md  004-clean-architecture-layers.md  005-composition-over-mixin-inheritance.md  README.md
docs/backend/: README.md
docs/bot/: README.md
docs/development/: README.md
docs/exports/: README.md
docs/mini-app/: README.md
docs/operations/: README.md
docs/operations/runbooks/: backup-restore.md  deploy.md  diagnostics.md
docs/product/: README.md
docs/security/: README.md  authorization-matrix.md
migrations/: README.md  alembic.ini  env.py
migrations/versions/: .gitkeep  20260329_01_initial_schema.py  20260329_02_ticket_workflow_events.py  20260330_03_ticket_sla_events.py  20260408_04_ticket_categories.py  20260409_05_ticket_feedback.py  20260410_06_ticket_attachments_and_notes.py  20260412_08_operator_invite_codes.py  20260412_09_ticket_ai_summaries.py  20260413_10_operator_invite_code_hash_index_cleanup.py
ops/: cli.py
ops/docker/: Dockerfile  compose.yml  entrypoint.sh  full.sh
ops/env/: README.md  local.env.example
ops/scripts/: ai_smoke_check.py  check_architecture_boundaries.py  check_repo_hygiene.py  port_available.py  smoke_check.py
src/ai_service/: bootstrap.py  healthcheck.py  main.py  runtime.py  service.py  service_completion.py  service_prompts.py  service_results.py
src/ai_service/grpc/: auth.py  client.py  server.py  translators.py
src/ai_service/proto/: ai_service.proto
src/app/: __init__.py  bootstrap.py  main.py  runtime.py  runtime_factories.py
src/application/: errors.py
src/application/ai/: contracts.py  summaries.py
src/application/contracts/: ai.py  runtime.py
src/application/services/: __init__.py  audit.py  authorization.py  diagnostics.py  helpdesk.py  stats.py
src/application/use_cases/: __init__.py  tickets.py
src/backend/: bootstrap.py  healthcheck.py  runtime.py
src/backend/grpc/: auth.py  client.py  contracts.py  messages.py  server.py  server_base.py  server_operations.py  server_ticketing.py  translators.py  translators_operatoring.py  translators_ticketing.py
src/backend/proto/: helpdesk.proto
src/bot/: __init__.py  access.py  callbacks.py  delivery.py  dispatcher.py  presentation.py  routers.py
src/bot/access/: __init__.py  policies.py  responses.py
src/bot/adapters/: helpdesk.py
src/bot/formatters/: __init__.py  categories.py  macros.py  operator.py  operator_admin_views.py  operator_ai.py  operator_archive_views.py  operator_primitives.py  operator_stats.py  operator_ticket_views.py  system.py  ticket_messages.py
src/bot/handlers/: __init__.py  client.py  operator.py  system.py
src/bot/keyboards/: __init__.py
src/bot/middlewares/: __init__.py  authorization.py  context.py
src/bot/texts/: __init__.py  access.py  buttons.py  categories.py  client.py  common.py  feedback.py  macros.py  operator.py  operator_invites.py  system.py  ticket_messages.py
src/domain/: tickets.py
src/domain/contracts/: __init__.py  repositories.py  tickets.py
src/domain/entities/: __init__.py  ai.py  feedback.py  ticket.py
src/domain/enums/: __init__.py  roles.py  tickets.py
src/infrastructure/: __init__.py  config.py  health.py  logging.py  metrics.py  runtime_context.py  runtime_factories.py  startup_checks.py
src/infrastructure/ai/: provider.py
src/infrastructure/assets/: __init__.py  storage.py
src/infrastructure/config/: __init__.py  ai_settings.py  parsers.py  settings.py
src/infrastructure/db/: __init__.py  base.py  models.py  repositories.py  session.py
src/infrastructure/exports/: analytics_snapshot_html.py  ticket_report_csv.py  ticket_report_html.py
src/infrastructure/redis/: __init__.py  async_support.py  client.py  contracts.py  fsm.py  keys.py  locks.py  operator_context.py  presence.py  rate_limit.py  runtime.py  sla.py  streams.py
src/mini_app/: api.py  auth.py  context.py  http.py  launch.py  main.py  request_parsing.py  responses.py  serializers.py
src/mini_app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/mini_app/gateway/: dashboard.py  tickets.py
src/mini_app/routes/: admin.py  analytics.py  dashboard.py  exports.py  queue.py  session.py  tickets.py
src/mini_app/serializers/: analytics.py  timeline.py
tests/: conftest.py  test_config.py
tests/ai/: test_ticket_assist_use_cases.py
tests/app/: test_bootstrap.py
tests/application/: test_authorization_service.py  test_helpdesk_scenarios.py  test_helpdesk_service.py
tests/backend/: test_helpdesk_backend_grpc.py
tests/bot/: test_access.py  test_attachment_policy.py  test_authorization_middleware.py  test_client_finish_flow.py  test_client_intake_flow.py  test_delivery.py  test_dispatcher.py  test_feedback_flow.py  test_navigation_consistency.py  test_operator_invite_flow.py  test_operator_live_reply_actions.py  test_operator_stats_formatting.py  test_presentation.py  test_stats_flow.py  test_ticket_export_flow.py
tests/component/ai/: test_ticket_assist_use_cases.py
tests/component/application/: test_authorization_matrix.py  test_helpdesk_scenarios.py  test_helpdesk_service.py  test_helpdesk_service_sla.py
tests/component/bot/: test_ai_intake_and_cancel.py  test_client_finish_flow.py  test_client_intake_entry_flow.py  test_delivery.py  test_dispatcher_harness.py  test_feedback_flow.py  test_navigation_consistency.py  test_operator_invite_flow.py  (+3 more)
tests/e2e/: conftest.py  test_ticket_lifecycle.py
tests/exporters/: test_analytics_exports.py  test_exports.py
tests/infrastructure/: test_asset_storage.py  test_exports.py
tests/security/: test_mini_app_xss_policy.py
tests/support/: __init__.py  aiogram.py  backend.py
tests/unit/: test_architecture_boundaries.py
(+196 files in other folders)
