[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiogram = "^3.26.0"
SQLAlchemy = "^2.0.0"
alembic = "^1.18.4"
asyncpg = "^0.30.0"
redis = "^7.2.1"
pydantic-settings = "^2.13.1"
grpcio = "^1.80.0"
protobuf = "^6.31.1"
grpcio-tools = "^1.80.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.0.0"
mypy = "^1.19.1"
ruff = "^0.15.1"
pre-commit = "^4.3.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/backend/grpc/generated", "src/ai_service/grpc/generated"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["ai_service", "app", "application", "bot", "domain", "infrastructure", "tests"]
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["^migrations/", "^src/backend/grpc/generated/"]

[[tool.mypy.overrides]]
module = [
    "ai_service.grpc.generated.*",
    "backend.grpc.generated.*",
    "google.protobuf.*",
    "grpc",
    "grpc.*",
]
ignore_missing_imports = true
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
